Сделал функционал установки маски и выбора кода в ScreenSignUp

--- a/common/src/main/res/values/strings.xml
+++ b/common/src/main/res/values/strings.xml
@@ -4,10 +4,10 @@
     //Screen Signup
     <string name="welcome">BEM-VINDO!</string>
     <string name="register_to_choose_a_bookmaker">Register to choose\na bookmaker</string>
-    <string name="enter_number_of_phone">seu número de telefone</string>
+    <string name="enter_number_of_phone">SEU NÚMERO DE TELEFONE</string>
     <string name="registration">REGISTRATION</string>
     <string name="confirm">By clicking on the “Register” button, you confirm that you\nare over 18 years old, have read and accept.</string>
-    <string name="terms_of_use_and_privacy_policy">Terms of use and privacy policy</string>
+    <string name="terms_of_use_and_privacy_policy">TERMS OF USE AND PRIVACY POLICY</string>
     <string name="notice_about_private_policy">SMS confirmation is free. The entrance to the application is confidential, your data will not be shared.</string>
 
 
